# transvoxelpp

./: CMakeLists.txt  LICENSE.txt  README.md
include/: transvoxel.hpp
include/transvoxel/: glm_traits.hpp  inttypes.hpp  lut.hpp  march.hpp  mesh.hpp  voxel.hpp
src/: march.cpp  transvoxel.cpp
